--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>eclipselink</artifactId>
             <version>3.0.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version> <!-- Certifique-se de usar a versão mais recente -->
+        </dependency>
     </dependencies>
 
 </project>
